fix overlap of mlh logo with events header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2197,3 +2197,7 @@ section {
   font-size: 15px;
   margin-bottom: 10px;
 }
+
+.mlh {
+  margin-right: 7%;
+}
